# MCP-Process-Image

./: .env.example  .gitignore  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SETUP.md  install.py  mcp.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py
lib/: config-generator.js  installer.js
scripts/: dev-install.js
src/mcp_process_image/: __init__.py  config.py  models.py  server.py  utils.py
src/mcp_process_image/api_clients/: __init__.py  base.py  openai_client.py
tests/: test_basic.py
